@@ -1,3 +1,7 @@
+1998-06-13  Mario Weilguni   <mweilguni@kde.org> (KMail-0.7.2)
+
+	* key for next_unread_message and prev_unread_message added
+
 1998-06-12  Stefan Taferner  <taferner@kde.org>
 
 	* Folder loading: moved status message in index
